# discord-whois

./: .gitignore  Cargo.toml
src/: discordclient.rs  discordmessage.rs  main.rs
